# boopato

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.watcher  README.md  autoupdate.sh  boopato.db  deploy.sh  docker-compose.yml  update.sh
src/: main.rs
src/commands/: about.rs  admin.rs  boops.rs  commit.rs  games.rs  help.rs  jobs.rs  kremlin_secrets.rs  mod.rs  redistribution.rs  soviet_hangman.rs  work.rs  yappers.rs
src/db/: mod.rs
