[package]
name = "boopato"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.5.7"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
chrono = "0.4.31"
tokio-rusqlite = "0.4.0"
async-trait = "0.1.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
